# unix-ipc-benchmarks

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/common/: args.cc  args.hh  bench.cc  bench.hh  launcher.cc  signals.cc  signals.hh  types.hh  utils.cc  utils.hh
src/message_queue/: client.cc  message.hh  mq.hh  queue_ops.cc  server.cc
src/named_pipe/: client.cc  named_pipe.cc  named_pipe.hh  server.cc
src/pipe/: pipe.cc
src/shm/: client.cc  server.cc  shm.cc  shm.hh
src/unix_socket/: client.cc  server.cc
